--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ turf.pointsWithinPolygon(
  points_turf, 
  geojsonLayer.toGeoJSON()
   );
-console.log('Found ' + ptsWithin.features.length + ' features');  
-console.log("results "+JSON.stringify(ptsWithin));
+console.log('Found ' + inside.features.length + ' features');  
+console.log("results "+JSON.stringify(inside));
 
   }
   </script>
