--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@ turf.pointsWithinPolygon(
  geojsonLayer.toGeoJSON()
   );
 console.log('Found ' + inside.features.length + ' features');  
-console.log("results "+JSON.stringify(inside));
+//console.log("results "+JSON.stringify(inside));
+var Test = JSON.parse(inside);
+console.log(Test.features);
 
   }
   </script>
