--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ console.log('Found ' + inside.features.length + ' features');
 
 for (let i=0 ; i < inside.features.length; i++)
 {
-console.log(inside.features[i].geometry.coordinates);
+console.log(inside.features[i].geometry.coordinates[1]);
 };
 
   }
