--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@ console.log('Found ' + inside.features.length + ' features');
 
 for (let i=0 ; i < inside.features.length; i++)
 {
-console.log(inside.features[i].geometry.coordinates[1]);
+var coords = [];
+coords[0] = inside.features[i].geometry.coordinates[1];
+coords[1] = inside.features[i].geometry.coordinates[0];	
+layer_adresses.addLayer(L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1));
 };
 
   }
