--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ layer_adresses.addLayer(L.circleMarker(coords, {radius: 2, color : 'red'}).addTo
 };
 
  document.getElementById("comment_1").innerHTML = inside.features.length +
-	 ' adresses relèvent d\' un quartier prioritaire.' + layer_adresses.length - inside.features.length ' n\' en relèvent pas.'
+	 ' adresses relèvent d\' un quartier prioritaire.' + layer_adresses.length - inside.features.length + ' n\' en relèvent pas.'
 
   }
   </script>
