--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@ layer_adresses.addLayer(L.circleMarker(coords, {radius: 2, color : 'red'}).addTo
     </div>
   
     <script>
-    window.onload(function()
+    window.onload = function()
     {
         exemple1();
 	exemple2();
-    })
+    }
     
  </script>
 <p id="surf"></p>
