--- a/index.html
+++ b/index.html
@@ -136,9 +136,12 @@ layer_adresses.addLayer(L.circleMarker(coords, {radius: 2, color : 'red'}).addTo
  document.getElementById("comment_1").innerHTML = inside.features.length +
 	 ' adresses relèvent d\' un quartier prioritaire.' + layer_adresses.length - inside.features.length + ' n\' en relèvent pas.'
 */
-  }
+  
   </script>
+  <p> 'Test' </p>
+ }
 </p>
+	      
 <!-- FIN: Exemple 1 -->
 
 <!-- Exemple 2 -->
