--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@ coords[0] = inside.features[i].geometry.coordinates[1];
 coords[1] = inside.features[i].geometry.coordinates[0];	
 layer_adresses.addLayer(L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1));
 };
- /*
+ 
  document.getElementById("comment_1").innerHTML = inside.features.length +
 	 ' adresses relèvent d\' un quartier prioritaire.' + layer_adresses.length - inside.features.length + ' n\' en relèvent pas.'
-*/
+
   
-  </script>
-  <p> 'Test' </p>
+ <div id="comment_1"></div>
  }
+</script>
 </p>
 	      
 <!-- FIN: Exemple 1 -->
@@ -219,6 +219,7 @@ layer_adresses.addLayer(L.circleMarker(coords, {radius: 2, color : 'red'}).addTo
   }
   </script>
 </p>
+<p> 'Test' </p>
 <!-- FIN: Exemple 2 -->
 	      
    </section>
