--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@ coords[0] = inside.features[i].geometry.coordinates[1];
 coords[1] = inside.features[i].geometry.coordinates[0];	
 layer_adresses.addLayer(L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1));
 };
- 
-console.log('Found ' + markers_adresses.markers.length + ' features');
-console.log('Found ' + layer_adresses.length + ' adresses');
+
+console.log('Found ' + inside.features.length + ' features');
+console.log('Found ' + layer_adresses.getLayers().length + ' adresses');
  document.getElementById("comment_1").innerHTML = inside.features.length +
-	 ' adresses relèvent d\' un quartier prioritaire.' + (markers_adresses.markers.length - inside.features.length) + ' n\' en relèvent pas.'
+	 ' adresses relèvent d\' un quartier prioritaire.' + (layer_adresses.getLayers().length - inside.features.length) + ' n\' en relèvent pas.'
 
   
 
