--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ for (let i=0 ; i < inside.features.length; i++)
 var coords = [];
 coords[0] = inside.features[i].geometry.coordinates[1];
 coords[1] = inside.features[i].geometry.coordinates[0];	
-layer_adresses.addLayer(L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1));
+L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1));
 };
 
 console.log('Found ' + inside.features.length + ' features');
