--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <p> - récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
     - recherche des adresses relevant d'un NQPV (frontière noire), QVA ou AQV (frontière jaune) via fonction turf.js PointsWithinPolygon <br>
-    - cliquer sur la zone pour voir apparaître le nom de la zone prioritaire
+    - survoler les quartiers prioritaires pour voir apparaître le nom de la zone
 </p>
 
 <p>
