--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Adherents selon distance à la 20eme C</title>
+    <title>Adresses des adherents de la 20eme C</title>
     <script src="./javascripts/hull.js"></script>
     <script src="./javascripts/dataGeo.js"></script>
     <script src="./javascripts/fonctions.js"></script>
