--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@ console.log('Found ' + layer_adresses.getLayers().length + ' adresses');
       
     poly[poly.length] = L.polygon(points_poly, {weight: 2, color : color[poly.length], fillopacity : 0.9}).addTo(map_2);
     surface[surface.length] = L.GeometryUtil.geodesicArea(poly[surface.length].getLatLngs()[0]);
+    console.log( surface[surface.length]);
     });
 	 
     color_fr.forEach(function(element){
