--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
       
     poly[poly.length] = L.polygon(points_poly, {weight: 2, color : color[poly.length], fillopacity : 0.9}).addTo(map_2);
     surface[surface.length] = L.GeometryUtil.geodesicArea(poly[surface.length].getLatLngs()[0]);
-    console.log( surface[surface.length]-1);
+    console.log(surface[surface.length-1]);
     });
 	 
     color_fr.forEach(function(element){
