--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     
 // on insère les polygones dans le sens inverse pour avoir une frontière intérieure de la bonne couleur
     for (let i = points.length-1 ; i = 0  ; i--) {
-    console.log(poly[i].opacity);
+    console.log('ok');
+    console.log(poly[i].color);
     poly[i].addTo(map_2);
     };
     
