--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     poly[poly.length] = L.polygon(points_poly, {weight: 2, color : color[poly.length], fillopacity : 0.9});
     surface[surface.length] = L.GeometryUtil.geodesicArea(poly[surface.length].getLatLngs()[0]);
     });
-    
+     console.log('ok');
+	 
 // on insère les polygones dans le sens inverse pour avoir une frontière intérieure de la bonne couleur
     for (let i = points.length-1 ; i = 0  ; i--) {
     console.log('ok');
