--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
      console.log(points.length);
 	 
 // on insère les polygones dans le sens inverse pour avoir une frontière intérieure de la bonne couleur
-    for (let i = points.length-1 ; i = 0  ; i--) {
+    for (let i = points.length-1 ; i >= 0  ; i--) {
     console.log('ok');
     console.log(poly[i].color);
     poly[i].addTo(map_2);
