--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     - on va étudier :  <br>
 	- Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville,  <br>
 	aux quartiers de veille active et aux anciens quartiers de veille;  <br>
-	- Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise.
+	- Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise. <br>
+	- Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des différents centres sociaux parisiens
 </p>
 		
 <!-- Exemple 1 -->
@@ -230,6 +231,102 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 </p>
 <p id="comment_2"></p>
 <!-- FIN: Exemple 2 -->
+
+<!-- Exemple 3 -->
+<h3><a name="ex3" class="anchor" ><span class="octicon octicon-link"></span>IRIS et zones d/'influence des centres sociaux parisiens</a></h3>
+
+<p> - récupération des polygones définissant les IRIS via une source de type GeoJSON <br>
+    - définition des zones d'influence des centres sociaux parisiens <br>	
+    - recherche des adresses relevant d'une zone d'influence de CS via fonction turf.js PointsWithinPolygon <br>
+    - survoler les IRIS pour voir apparaître leur nom
+</p>
+
+<p>
+  <div id="map_3" style="width: 840px; height: 560px"></div>
+  <script>
+ function exemple3() {
+    var map_3 = L.map('map_3').setView([48.864891,2.389828], 15);
+    var tableau_sortie = data;
+  
+    tableau_sortie.map( adresse => {
+    let properties = {
+   "lng": adresse.lng,
+   "lat": adresse.lat
+    };
+    return properties;
+    });
+	 
+    var PS = tableau_sortie;
+  
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 18,
+        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map_3);
+ 
+    var layer_adresses = L.layerGroup().addTo(map_3);
+    PS.forEach(
+    function(latlng) {
+        layer_adresses.addLayer(L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_3));
+	
+    });
+    var markers_adresses = {'markers': layer_adresses};
+    L.control.layers(null, markers_adresses).addTo(map_3);
+   
+  var geojsonLayer = L.geoJson(geojsonFeature, { style: function(feature) {
+        switch (feature.properties.c_nat_qpv) {
+		case 'NQPV': return {color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
+            default:   return {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
+	}
+        }
+	}
+);
+  geojsonLayer.addTo(map_3);
+	 
+
+geojsonLayer.eachLayer(function (layer) {
+// layer.bindPopup('<h1>'+feature.properties.f1+'</h1><p>name: '+feature.properties.f2+'</p>')
+    layer.bindPopup('<h3>'+layer.feature.properties.c_nat_qpv + ' : ' + layer.feature.properties.l_nqpv + '</h3>');
+layer.on('mouseover', function (e) {
+            this.openPopup();
+        });
+        layer.on('mouseout', function (e) {
+            this.closePopup();
+        });
+  }); 
+
+var points_turf = [];
+layer_adresses.eachLayer(function(element)
+{
+var lnglat = [element._latlng.lng, element._latlng.lat];
+points_turf.push(lnglat);
+}
+)
+
+var inside = 
+turf.pointsWithinPolygon(
+ turf.points(points_turf), 
+ geojsonLayer.toGeoJSON()
+  );
+  
+
+
+for (let i=0 ; i < inside.features.length; i++)
+{
+var coords = [];
+coords[0] = inside.features[i].geometry.coordinates[1];
+coords[1] = inside.features[i].geometry.coordinates[0];	
+L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_3);
+};
+
+ document.getElementById("comment_3").innerHTML = inside.features.length +
+	 ' adresses relèvent d\'un quartier prioritaire (en rouge).' + ' ' + (layer_adresses.getLayers().length - inside.features.length) + ' n\'en relèvent pas (en bleu).'
+
+
+ }
+</script>
+</p>
+<p id="comment_3"></p>	      
+<!-- FIN: Exemple 3 -->
 	      
    </section>
       </div>
@@ -240,6 +337,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     {
         exemple1();
 	exemple2();
+	exemple3();
     }
     
  </script>
