--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
     <script src="./javascripts/qpv_qva.json"></script>
+    <script src="./javascripts/IRIS.json"></script>
 	  
 	
 </head>
