--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var markers_adresses = {'markers': layer_adresses};
     L.control.layers(null, markers_adresses).addTo(map_3);
 
- var geojsonLayer = L.geoJson(iris, { style:  {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7});
+ var geojsonLayer = L.geoJson(iris, { style:  {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7}});
   geojsonLayer.addTo(map_3);
    
 	 
