--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 <!-- FIN: Exemple 2 -->
 
 <!-- Exemple 3 -->
-<h3><a name="ex3" class="anchor" ><span class="octicon octicon-link"></span>IRIS et zones d/'influence des centres sociaux parisiens</a></h3>
+<h3><a name="ex3" class="anchor" ><span class="octicon octicon-link"></span>IRIS et zones d'influence des centres sociaux parisiens</a></h3>
 
 <p> - récupération des polygones définissant les IRIS via une source de type GeoJSON <br>
     - définition des zones d'influence des centres sociaux parisiens <br>	
