--- a/index.html
+++ b/index.html
@@ -276,7 +276,17 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
  var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fillopacity" : 0.7}});
   geojsonLayer.addTo(map_3);
    
-	 
+   var PS = tableau_sortie;
+ 
+ 
+    var layer_adresses_CS = L.layerGroup().addTo(map_1);
+    PS.forEach(
+    function(latlng) {
+        layer_adresses_CS.addLayer(L.circleMarker(latlng, {radius: 3, color : 'red'}).addTo(map_1));
+	
+    });
+    var markers_adresses_CS = {'markers': layer_adresses_CS};
+    L.control.layers(null, markers_adresses_CS).addTo(map_1); 
 
 
 
