--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
  
     var layer_adresses = L.layerGroup().addTo(map_3);
     PS.forEach(
-    function(latlng) {
-        layer_adresses.addLayer(L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_3));
+    function(element) {
+           layer_adresses.addLayer(L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_3));;
 	
     });
     var markers_adresses = {'markers': layer_adresses};
@@ -286,7 +286,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 	
     });
     var markers_adresses_CS = {'markers': layer_adresses_CS};
-    L.control.layers(null, markers_adresses_CS).addTo(map_3); 
+    L.control.layers(null, markers_adresses_CS).addTo(map_3);
 
 
 
