--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 	
     });
     var markers_adresses_CS = {'markers': layer_adresses_CS};
-    L.control.layers(null, markers_adresses_CS).addTo(map_3);
+    // L.control.layers(null, markers_adresses_CS).addTo(map_3);
 
 
 
