--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	
     });
     var markers_adresses = {'markers': layer_adresses};
-    L.control.layers(null, markers_adresses).addTo(map_1);
+   // L.control.layers(null, markers_adresses).addTo(map_1);
    
   var geojsonLayer = L.geoJson(geojsonFeature, { style: function(feature) {
         switch (feature.properties.c_nat_qpv) {
@@ -267,11 +267,12 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var layer_adresses = L.layerGroup().addTo(map_3);
     PS.forEach(
     function(latlng) {
-           layer_adresses.addLayer(L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_3));;
+           layer_adresses.addLayer(L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_3));
+	   layer_adresses[layer_adresses.length].bindTooltip(PS.feature.properties.nom_centre).addTo(map_3);
 	
     });
     var markers_adresses = {'markers': layer_adresses};
-    L.control.layers(null, markers_adresses).addTo(map_3);
+   // L.control.layers(null, markers_adresses).addTo(map_3);
 
  var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fillopacity" : 0.7}});
   geojsonLayer.addTo(map_3);
