--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var layer_adresses = L.layerGroup().addTo(map_3);
     PS.forEach(
     function(latlng) {
-           var marker_courant = layer_adresses.addLayer(L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_3));
+           layer_adresses.addLayer(L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_3));
     });
     var markers_adresses = {'markers': layer_adresses};
    // L.control.layers(null, markers_adresses).addTo(map_3);
@@ -281,8 +281,8 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var layer_adresses_CS = L.layerGroup().addTo(map_3);
     PS.forEach(
     function(latlng) {
-        layer_adresses_CS.addLayer(L.circleMarker(latlng, {radius: 3, color : 'red'}).addTo(map_3));
-	marker_courant.bindTooltip(PS[layer_adresses.getLayers.length-1].nom_centre_social).addTo(map_3);
+        var marker_courant = layer_adresses_CS.addLayer(L.circleMarker(latlng, {radius: 3, color : 'red'}).addTo(map_3));
+	marker_courant.bindTooltip(PS[layer_adresses_CS.getLayers.length-1].nom_centre_social).addTo(map_3);
 	
     });
     var markers_adresses_CS = {'markers': layer_adresses_CS};
