--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     PS.forEach(
     function(latlng) {
         var marker_courant = layer_adresses_CS.addLayer(L.circleMarker(latlng, {radius: 3, color : 'red'}).addTo(map_3));
-	marker_courant.bindTooltip(PS[layer_adresses_CS.getLayers.length-1].nom_centre_social).addTo(map_3);
-	
+	marker_courant.bindTooltip('Test').addTo(map_3);
     });
     var markers_adresses_CS = {'markers': layer_adresses_CS};
     // L.control.layers(null, markers_adresses_CS).addTo(map_3);
