--- a/index.html
+++ b/index.html
@@ -281,8 +281,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var layer_adresses_CS = L.layerGroup().addTo(map_3);
     PS.forEach(
     function(latlng) {
-        var layer_courant = layer_adresses_CS.addLayer(L.circleMarker(latlng, {radius: 3, color : 'red'}).addTo(map_3));
-	layer_courant.bindTooltip('Test').addTo(map_3);
+        layer_adresses_CS.addLayer(L.circleMarker(latlng, {radius: 3, color : 'red'}).bindTooltip('Test').addTo(map_3));
     });
     var markers_adresses_CS = {'markers': layer_adresses_CS};
     // L.control.layers(null, markers_adresses_CS).addTo(map_3);
