--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 <p> - récupération des polygones définissant les IRIS via une source de type GeoJSON <br>
     - définition des zones d'influence des centres sociaux parisiens <br>	
     - recherche des adresses relevant d'une zone d'influence de CS via fonction turf.js PointsWithinPolygon <br>
-    - survoler les IRIS pour voir apparaître leur nom
+    - survoler les points rouges (centres sociaux) pour voir apparaître le nom de la structure
 </p>
 
 <p>
