--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 <p> - récupération des polygones définissant les IRIS via une source de type GeoJSON <br>
     - définition des zones d'influence des centres sociaux parisiens <br>	
     - recherche des adresses relevant d'une zone d'influence de CS via fonction turf.js PointsWithinPolygon <br>
-    - survoler les points rouges (centres sociaux) pour voir apparaître le nom de la structure
+    - survoler les points jaunes (centres sociaux) pour voir apparaître le nom de la structure
 </p>
 
 <p>
@@ -282,7 +282,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var layer_adresses_CS = L.layerGroup().addTo(map_3);
     PS.forEach(
     function(element) {
-        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'red'}).bindTooltip(element.nom_centre_social).addTo(map_3));
+        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'yellow'}).bindTooltip(element.nom_centre_social).addTo(map_3));
     });
     var markers_adresses_CS = {'markers': layer_adresses_CS};
     // L.control.layers(null, markers_adresses_CS).addTo(map_3);
