--- a/index.html
+++ b/index.html
@@ -274,7 +274,10 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
    // L.control.layers(null, markers_adresses).addTo(map_3);
 
  var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fillopacity" : 0.7}});
-  geojsonLayer.addTo(map_3);
+  geojsonLayer.bindTooltip(function (layer) {
+    return layer.feature.properties.name; //merely sets the tooltip text
+ }, {permanent: true, opacity: 0.5}  //then add your options
+).addTo(map_3);
    
    var PS = centres_sociaux;
  
