--- a/index.html
+++ b/index.html
@@ -273,10 +273,9 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var markers_adresses = {'markers': layer_adresses};
    // L.control.layers(null, markers_adresses).addTo(map_3);
 
- var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fillopacity" : 0.7}});
-  geojsonLayer.bindTooltip(function (layer) {
+ var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fillopacity" : 0.7}}).bindTooltip(function (layer) {
     return 'test'; //merely sets the tooltip text
- }, {permanent: true, opacity: 0.5}  //then add your options
+ }, {permanent: false, opacity: 0.5}  //then add your options
 ).addTo(map_3);
    
    var PS = centres_sociaux;
