--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var markers_adresses = {'markers': layer_adresses};
    // L.control.layers(null, markers_adresses).addTo(map_3);
 
- var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fillopacity" : 0.7}}).bindTooltip(function (layer) {
-    return 'test'; //merely sets the tooltip text
+ var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fillopacity" : 0.7}}).bindTooltip(function (feature, layer) {
+    return '<h3>'+layer.feature.properties.C_IR + ' : ' + layer.feature.properties.L_IR + '</h3>'; //merely sets the tooltip text
  }, {permanent: false, opacity: 0.5}  //then add your options
 ).addTo(map_3);
    
