--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     - définition des zones d'influence des centres sociaux parisiens <br>	
     - recherche des adresses relevant d'une zone d'influence de CS via fonction turf.js PointsWithinPolygon <br>
     - survoler les points jaunes (centres sociaux) pour voir apparaître le nom de la structure
+    - survoler les zones d'IRIS pour voir apparaître le numéro et le nom de l'IRIS
 </p>
 
 <p>
