--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   var geojsonLayer = L.geoJson(geojsonFeature, { style: function(feature) {
         switch (feature.properties.c_nat_qpv) {
 		case 'NQPV': return {color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
-		case 'QVA': return {color: "orange","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
+		case 'QVA': return {color: "purple","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
             default:   return {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
 	}
         }
