--- a/index.html
+++ b/index.html
@@ -216,8 +216,6 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 	 
 // on insère les polygones dans le sens inverse pour avoir une frontière intérieure de la bonne couleur
     for (let i = points.length-1 ; i >= 0  ; i--) {
-    console.log('ok');
-    console.log(poly[i].color);
     poly[i].addTo(map_2);
     };
     
@@ -282,7 +280,6 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
    
    var PS = centres_sociaux;
  
- 
     var layer_adresses_CS = L.layerGroup().addTo(map_3);
     PS.forEach(
     function(element) {
@@ -291,7 +288,8 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var markers_adresses_CS = {'markers': layer_adresses_CS};
     // L.control.layers(null, markers_adresses_CS).addTo(map_3);
 
-    
+    layer_adresses_CS.eachLayer(function(layer)
+    {console.log(layer.feature.radius);});
 
 
  }
