--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
-    <script src="./javascripts/IRIS_influence_CS.js"></script>	  
+    <script src="./javascripts/IRIS_influence_CS.json"></script>	  
 	
 </head>
 <body>
