--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     return 'IRIS' + '<br/>' + layer.feature.properties.C_IR + ' : ' + layer.feature.properties.L_IR; //merely sets the tooltip text
  }, {permanent: false, opacity: 0.8}  //then add your options
 ).addTo(map_3);
+
+    geojsonLayer.eachLayer(function(layer)
+    {console.log(layer.getTooltip()._content.replace('IRIS<br/>',''));});
    
    var PS = centres_sociaux;
  
@@ -288,8 +291,8 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     var markers_adresses_CS = {'markers': layer_adresses_CS};
     // L.control.layers(null, markers_adresses_CS).addTo(map_3);
 
-    layer_adresses_CS.eachLayer(function(layer)
-    {console.log(layer.getTooltip()._content.replace('Centre social<br/>',''));});
+    //layer_adresses_CS.eachLayer(function(layer)
+    // {console.log(layer.getTooltip()._content.replace('Centre social<br/>',''));});
 
 
  }
