--- a/index.html
+++ b/index.html
@@ -280,6 +280,10 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 
     geojsonLayer.eachLayer(function(layer)
     {console.log(layer.feature.properties.C_IR);});
+    
+    for (i = 0; i < influence_IRIS.length ; i++) {
+    console.log(Object.values(influence_IRIS)[0][i]);
+    };
    
    var PS = centres_sociaux;
  
