--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
     {console.log(layer.feature.properties.C_IR);});
     
     for (i = 0; i < influence_IRIS.length ; i++) {
-    console.log(Object.values(influence_IRIS)[0][i]);
+    console.log(Object.values(influence_IRIS)[i].num_iris);
     };
    
    var PS = centres_sociaux;
