--- a/index.html
+++ b/index.html
@@ -278,12 +278,24 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
  }, {permanent: false, opacity: 0.8}  //then add your options
 ).addTo(map_3);
 
-    geojsonLayer.eachLayer(function(layer)
-    {console.log(layer.feature.properties.C_IR);});
-    
-    for (i = 0; i < influence_IRIS.length ; i++) {
-    console.log(Object.values(influence_IRIS)[i].num_iris);
+
+
+// on recherche les IRIS qui sont dans des zones d'inluence des CS pour modifier la couleur et les infos du layer correspondant
+
+// on construit le tableau contenant tous les numéros d'IRIS des layers
+var num_iris = [];
+geojsonLayer.eachLayer(function(layer)
+    {num_iris.push(layer.feature.properties.C_IR);});
+
+// on balaie les IRIS sous influence
+	 for (i = 0; i < influence_IRIS.length ; i++) {
+    console.log(num_iris.findIndex(Object.values(influence_IRIS)[i].num_iris)));
     };
+   
+	 
+//    geojsonLayer.eachLayer(function(layer)
+//    {console.log(layer.feature.properties.C_IR);});
+    
    
    var PS = centres_sociaux;
  
