--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@ geojsonLayer.eachLayer(function(layer)
     console.log(num_iris.findIndex(Object.values(influence_IRIS)[i].num_iris));
     };
    
+// Object.values(influence_IRIS)[i].num_iris
 	 
 //    geojsonLayer.eachLayer(function(layer)
 //    {console.log(layer.feature.properties.C_IR);});
