--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ geojsonLayer.eachLayer(function(layer)
 
 // on balaie les IRIS sous influence
 	 for (i = 0; i < influence_IRIS.length ; i++) {
-    console.log(num_iris.findIndex(Object.values(influence_IRIS)[i].num_iris));
+    console.log(num_iris.findIndex(751020201));
     };
    
 // Object.values(influence_IRIS)[i].num_iris
