--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script> 
-    <script src="https://raw.github.com/mapbox/leaflet-geodesy/gh-pages/leaflet-geodesy.js"></script> 
+    <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-geodesy/v0.1.0/leaflet-geodesy.js"></script> 
 	  
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
