--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	- Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville,  <br>
 	aux quartiers de veille active et aux anciens quartiers de veille;  <br>
 	- Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise. <br>
-	- Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des différents centres sociaux parisiens
+	- Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
 </p>
 		
 <!-- Exemple 1 -->
@@ -238,8 +238,9 @@ L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_1);
 <h3><a name="ex3" class="anchor" ><span class="octicon octicon-link"></span>IRIS et zones d'influence des centres sociaux parisiens</a></h3>
 
 <p> - récupération des polygones définissant les IRIS via une source de type GeoJSON <br>
-    - définition des zones d'influence des centres sociaux parisiens <br>	
-    - recherche des adresses relevant d'une zone d'influence de CS via fonction turf.js PointsWithinPolygon <br>
+    - on exclut les adresses relevant de la zone d'influence de la 20ème Chaise  <br>
+    - les zones d'influence des centres sociaux parisiens sont définies par un rayon de 500 mètres <br>			
+    - recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon <br>
     - survoler les points jaunes (centres sociaux) pour voir apparaître le nom de la structure <br>
     - survoler les zones d'IRIS pour voir apparaître le numéro et le nom de l'IRIS
 </p>
@@ -304,7 +305,9 @@ function unify(polyList) {
 	 
     PS.forEach(
     function(element) {
+	if ( element.nom_centre_social != 'La 20eme Chaise') {
         layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'purple'}).bindTooltip('Centre social' + '<br/>' + element.nom_centre_social,{permanent: false, opacity: 0.8, fillcolor : 'yellow'}).addTo(map_3));
+	}
  //       layer_cercles_CS.addLayer(L.circle([element.lat, element.lng], {radius: 400, weight : 2.0, color : 'yellow', fill : false}).bindTooltip('Centre social' + '<br/>' + element.nom_centre_social,{permanent: false, opacity: 0.8, fillcolor : 'yellow'}).addTo(map_3));
     });
 	 
