--- a/index.html
+++ b/index.html
@@ -82,18 +82,19 @@
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map_1);
    
-  var geojsonLayer = L.geoJson(geojsonFeature, { style: function(feature) {
-        switch (feature.properties.c_nat_qpv) {
-		case 'NQPV': return {color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
-		case 'QVA': return {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
-            default:   return {color: "purple","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
-	}
+  var Layer_NQPV = L.geoJson(geojsonFeature, { style: function(feature) {
+        filter (feature.properties.c_nat_qpv === 'NQPV') {
+		return {color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};}
         }
 	}
 );
-  geojsonLayer.addTo(map_1);	 
 
-geojsonLayer.eachLayer(function (layer) {
+// case 'QVA': return {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
+//            default:   return {color: "purple","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
+  
+ Layer_NQPV.addTo(map_1);	 
+
+Layer_NQPV.eachLayer(function (layer) {
 // layer.bindPopup('<h1>'+feature.properties.f1+'</h1><p>name: '+feature.properties.f2+'</p>')
     layer.bindPopup('<h3>'+layer.feature.properties.c_nat_qpv + ' : ' + layer.feature.properties.l_nqpv + '</h3>');
 layer.on('mouseover', function (e) {
@@ -104,7 +105,7 @@ layer.on('mouseover', function (e) {
         });
   });
 
- console.log(geojsonLayer.getLayers()[0]);
+ console.log(Layer_NQPV.getLayers()[0]);
 
   var layer_adresses = L.layerGroup().addTo(map_1);
     PS.forEach(
@@ -126,7 +127,7 @@ points_turf.push(lnglat);
 var inside = 
 turf.pointsWithinPolygon(
  turf.points(points_turf), 
- geojsonLayer.toGeoJSON()
+ Layer_NQPV.toGeoJSON()
   );
   
 
