--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     }).addTo(map_1);
    
   var Layer_NQPV = L.geoJson(geojsonFeature, { filter : function(feature) {
-        return (feature.properties.c_nat_qpv == 'NQPV')}, {style :
+        return (feature.properties.c_nat_qpv == 'NQPV')}}, {style :
 		{color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7}}}
 );
 
