--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
    
   var Layer_NQPV = L.geoJson(geojsonFeature, { filter : function(feature) {
         return (feature.properties.c_nat_qpv == 'NQPV')}}, {style :
-		{color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7}}}
+		{color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7}}
 );
 
 // case 'QVA': return {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
