--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     }).addTo(map_1);
    
   var Layer_NQPV = L.geoJson(geojsonFeature, { filter : function(feature) {
-        feature.properties.c_nat_qpv == 'NQPV'}}, {style :
-		{color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7}}
+        return feature.properties.c_nat_qpv == 'NQPV'}}, {style :
+		return {color: "black","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7}}
 );
 
 // case 'QVA': return {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
