--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ layer.on('mouseover', function (e) {
         });
   });
 
- console.log(Layer_NQPV.getLayers()[0]);
+ console.log(map_1.getLayers());
 
   var layer_adresses = L.layerGroup().addTo(map_1);
     PS.forEach(
