--- a/index.html
+++ b/index.html
@@ -108,14 +108,17 @@ map_1.eachLayer(function (layer) {console.log(layer);});
 
 map_1.eachLayer(function (layer) {
 // layer.bindPopup('<h1>'+feature.properties.f1+'</h1><p>name: '+feature.properties.f2+'</p>')
-    layer.bindPopup('<h3>'+layer.feature.properties.c_nat_qpv + ' : ' + layer.feature.properties.l_nqpv + '</h3>');
-layer.on('mouseover', function (e) {
+    if(layer.hasOwnProperty('feature'))
+    {
+     layer.bindPopup('<h3>'+layer.feature.properties.c_nat_qpv + ' : ' + layer.feature.properties.l_nqpv + '</h3>');
+     layer.on('mouseover', function (e) {
             this.openPopup();
-        });
-        layer.on('mouseout', function (e) {
+          });
+     layer.on('mouseout', function (e) {
             this.closePopup();
-        });
-  });
+          });
+    }
+                                   });
 
   var layer_adresses = L.layerGroup().addTo(map_1);
     PS.forEach(
